Updating documentation, adding a rough event handler for customizations

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "test-watch": "jest --watch",
-    "server": "nodemon src/index.js"
+    "start": "node src/index.js",
+    "development": "nodemon src/index.js"
   },
   "author": "",
   "license": "MIT",
