--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "start": "node src/index.js",
-    "development": "nodemon src/index.js"
+    "development": "nodemon src/index.js",
+    "build": "docker build -t listen-server ."
   },
   "author": "",
   "license": "MIT",
