--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@bblabs/listen-server",
   "version": "1.0.1",
   "description": "Allow REST requests",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "test-watch": "jest --watch",
