--- a/.eslintrc
+++ b/.eslintrc
@@ -15,9 +15,8 @@
   ],
   "rules": {
     "quotes": ["warn", "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
-
+    "indent": ["error", 2],
     "no-console": 0,
-
     "block-spacing": 1,
     "no-trailing-spaces": "error",
     "space-before-blocks": "error",
