--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "knex": "^0.14.4",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {
