--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest",
     "test-watch": "jest --watch",
+    "test-coverage": "jest --coverage",
     "start": "node src/index.js",
     "development": "nodemon src/index.js",
     "build": "docker build -t listen-server .",
@@ -17,6 +18,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "knex": "^0.14.4",
+    "moment": "^2.20.1",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {
